--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     outline: 0;
     background: #ebfffc;
     color: #555;
+    width: 75%;
     padding: 10px 25px;
     height: 60px;
     border-radius: 30px;
@@ -50,7 +51,7 @@ body{
 }
 
 .search button img{
-    width: 16px;
+    width: 18px;
 }
 
 .weather-icon{
